# MSLab

./: .gitignore  render.yaml
.github/workflows/: keep-alive.yml
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  render.yaml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2dfad462594b_initial_schema_users_racks_professors_.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/routes/: __init__.py  cages.py  dashboard.py  professors.py  racks.py  reports.py
backend/app/models/: __init__.py  assignment.py  base.py  cage.py  professor.py  rack.py  user.py
backend/app/schemas/: __init__.py  cage.py  dashboard.py  professor.py  rack.py
docs/: 01_PRD.md  02_TRD.md  03_UserFlow.md  04_DatabaseDesign.md  05_DesignSystem.md  06_TASKS.md  07_CodingConvention.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/cages/: CageCell.module.css  CageCell.tsx  CageGrid.module.css  CageGrid.tsx  ConfirmReleaseModal.module.css  ConfirmReleaseModal.tsx  ProfessorSelectModal.module.css  ProfessorSelectModal.tsx  RackTabs.module.css  RackTabs.tsx  index.ts
frontend/src/components/common/: Button.module.css  Button.tsx  Input.module.css  Input.tsx  Modal.module.css  Modal.tsx  Toast.tsx  (+2 more)
frontend/src/hooks/: index.ts  useCageGrid.ts
frontend/src/pages/: CagesPage.module.css  CagesPage.tsx  DashboardPage.module.css  DashboardPage.tsx  SettingsPage.module.css  SettingsPage.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
(+26 files in other folders)
